testsuite/tests/safeHaskell/flags/SafeFlags26.stderr

SafeFlags26.hs:2:17: error: [-Wsafe, -Werror=safe]
    ‘SafeFlags26’ has been inferred as safe!
